@@ -12,6 +12,12 @@
 
 	<H3 _HD_OMIT_TOC>Bug Fixes</H3>
 
+	<LI>Fixed a crash bug that appeared when more than 10
+	blank pages were present in a document (PR #6223)</LI>
+
+	<LI>Color changes were not reflected in PRE text (STR
+	#129)</LI>
+
 	<LI>Remote URLs did not always work on older operating
 	systems (PR #6179)</LI>
 
